--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             </ul>
         </nav>
 
+        <!-- MAIN PAGE -->
+
+        <!--
         <section class="main-content">
             <header class="header">
                 <h1 class="header__title">Sorting Algorithms in Javascript</h1>
@@ -37,60 +40,177 @@
                 <button class="header__explore">EXPLORE</button>
                 <button class="header__additional">Sign up with Google</button>
             </header>
+            <div class="content">
+                <div class="advantages">
+                    <div class="advantages__post">
+                        <img
+                            src="./assets/img/blaze-adv.svg"
+                            alt="fast"
+                            class="advantages__post__image">
+                        <div class="advantages__post__wrapper">
+                            <h3 class="advantages__post__wrapper__title">Fastest possible</h3>
+                            <p class="advantages__post__wrapper__desc">Our algorithms are as fast as
+                                possible, there is simply no way someone did it better</p>
+                        </div>
+                    </div>
+                    <div class="advantages__post">
+                        <img
+                            src="./assets/img/block-adv.svg"
+                            alt="easy-and-accessible"
+                            class="advantages__post__image">
+                        <div class="advantages__post__wrapper">
 
-            <div class="advantages">
-                <div class="advantages__post">
-                    <img
-                        src="./assets/img/blaze-adv.svg"
-                        alt="fast"
-                        class="advantages__post__image">
-                    <h3 class="advantages__post__title">Fastest possible</h3>
-                    <p class="advantages__post__description">Our algorithms are as fast as possible, there is no way someone did it better</p>
+                            <h3 class="advantages__post__wrapper__title">Easy and accessible</h3>
+                            <p class="advantages__post__wrapper__desc">Each sorting algorithm has a clear
+                                description to help you understand the concept</p>
+                        </div>
+
+                    </div>
+                    <div class="advantages__post">
+                        <img
+                            src="./assets/img/mobile-adv.svg"
+                            alt="mobile-friendly"
+                            class="advantages__post__image">
+                        <div class="advantages__post__wrapper">
+
+                            <h3 class="advantages__post__wrapper__title">Mobile friendly</h3>
+                            <p class="advantages__post__wrapper__desc">You can use our website comfortably
+                                on various devices, including phones and tablets</p>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="advantages__post">
-                    <img
-                        src="./assets/img/block-adv.svg"
-                        alt="easy-and-accessible"
-                        class="advantages__post__image">
-                    <h3 class="advantages__post__title">Easy and accessible</h3>
-                    <p class="advantages__post__description">Each sorting algorithm has a clear
-                        description to help you understand the concept</p>
-                </div>
-                <div class="advantages__post">
-                    <img
-                        src="./assets/img/mobile-adv.svg"
-                        alt="mobile-friendly"
-                        class="advantages__post__image">
-                    <h3 class="advantages__post__title">Mobile friendly</h3>
-                    <p class="advantages__post__description">You can use our website comfortably on
-                        various devices, including phones and tablets</p>
-                </div>
+
+                <video class="video" controls></video>
             </div>
 
-            <video controls></video>
         </section>
-        
+
         <section class="feedback">
             <img
                 src="./assets/img/face-picture.png"
                 alt="face-picture"
                 class="feedback__image">
-            <h6 class="feedback__name">Talyah Kodumal,
-                <br>
-                CTO and Co-Founder
-                <br>
-                airly</h6>
-            <p class="feedback__quote">“I have learnt so much using this website! I
-                recommend it to everyone that starts their journey with algorithms and web
-                development!”</p>
+            <div class="feedback__wrapper">
+                <h6 class="feedback__wrapper__name">
+                    <b>Talyah Kodumal,
+                        <br>
+                        CTO and Co-Founder
+                        <br></b>
+                    airly</h6>
+                <p class="feedback__wrapper__quote">“I have learnt so much using this website! I
+                    recommend it to everyone that starts their journey with algorithms and web
+                    development!”</p>
+            </div>
+
         </section>
+        -->
+
+        <!-- ABOUT PAGE -->
+
+        <!--
+        <section class="about">
+            <div class="about__wrapper">
+                <h1 class="about__wrapper__title">My name is Thomas...</h1>
+                <p class="about__wrapper__desc">I'm a third year Applied Computer Science
+                    student at the AGH University of Science and Technology in Krakow. I have been
+                    learning Front-End technologies for a year now and this time was just enough to
+                    make sure that this is my place in the industry. <br><br> This website is one of my
+                    university projects, but during the process it turned out to be one of my
+                    favourites. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id urna
+                    sed tortor dignissim semper. Nulla nec dapibus urna, a ultrices ante. Etiam
+                    purus lorem, placerat vitae hendrerit id, ultrices sed est. Phasellus
+                    scelerisque volutpat consectetur. Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                </p>
+            </div>
+            <img src="./assets/img/about-photo.jpg" alt="about-photo" class="about__photo">
+        </section>
+        -->
+
+        <!-- News -->
+        
+        <!--
+        <section class="news">
+            <div class="news__post">
+                <img
+                    src="./assets/img/news/pc-evening.png"
+                    alt="post-photo"
+                    class="news__post__image">
+                <div class="news__post__wrapper">
+                    <h1 class="news__post__wrapper__title">ES6 for everyone</h1>
+                    <h3 class="news__post__wrapper__date">22 - october - 20</h3>
+                    <p class="news__post__wrapper__desc">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Sed id urna sed tortor dignissim semper. Nulla nec dapibus
+                        urna, a ultrices ante. Etiam purus lorem, placerat vitae hendrerit id, ultrices
+                        sed est. Phasellus scelerisque volutpat consectetur.
+                    </p>
+                </div>
+            </div>
+
+            <div class="news__post">
+                <img
+                    src="./assets/img/news/girl-board.png"
+                    alt="post-photo"
+                    class="news__post__image">
+                <div class="news__post__wrapper">
+                    <h1 class="news__post__wrapper__title">Why algorithms?</h1>
+                    <h3 class="news__post__wrapper__date">20 - october - 20</h3>
+                    <p class="news__post__wrapper__desc">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Sed id urna sed tortor dignissim semper. Nulla nec dapibus
+                        urna, a ultrices ante. Etiam purus lorem, placerat vitae hendrerit id, ultrices
+                        sed est. Phasellus scelerisque volutpat consectetur.
+                    </p>
+                </div>
+            </div>
+
+            <div class="news__post">
+                <img
+                    src="./assets/img/news/vscode-colors.png"
+                    alt="post-photo"
+                    class="news__post__image">
+                <div class="news__post__wrapper">
+                    <h1 class="news__post__wrapper__title">Front-end roadmap</h1>
+                    <h3 class="news__post__wrapper__date">15 - october - 20</h3>
+                    <p class="news__post__wrapper__desc">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Sed id urna sed tortor dignissim semper. Nulla nec dapibus
+                        urna, a ultrices ante. Etiam purus lorem, placerat vitae hendrerit id, ultrices
+                        sed est. Phasellus scelerisque volutpat consectetur.
+                    </p>
+                </div>
+            </div>
+
+            <div class="news__post">
+                <img
+                    src="./assets/img/news/security-js.png"
+                    alt="post-photo"
+                    class="news__post__image">
+                <div class="news__post__wrapper">
+                    <h1 class="news__post__wrapper__title">Security in JS apps</h1>
+                    <h3 class="news__post__wrapper__date">12 - october - 20</h3>
+                    <p class="news__post__wrapper__desc">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Sed id urna sed tortor dignissim semper. Nulla nec dapibus
+                        urna, a ultrices ante. Etiam purus lorem, placerat vitae hendrerit id, ultrices
+                        sed est. Phasellus scelerisque volutpat consectetur.
+                    </p>
+                </div>
+            </div>
+
+        </section>
+    -->
 
         <footer class="footer">
             <img src="./assets/img/footer-logo.png" alt="footer-logo" class="footer__logo">
             <ul class="footer__links">
-                <li class="footer__link">News</li>
-                <li class="footer__link">Algorithms</li>
-                <li class="footer__link">About</li>
+                <li class="footer__link">
+                    <a href="#">News</a>
+                </li>
+                <li class="footer__link">
+                    <a href="#">Algorithms</a>
+                </li>
+                <li class="footer__link">
+                    <a href="#">About</a>
+                </li>
             </ul>
             <h5 class="footer__copyright">Copyright © 2020 Tomasz Gajda</h5>
         </footer>
