feat(webpack): webpack bundling, beautifying and optimizing scss files (media queries)

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="./assets/img/footer-logo.png">
 
         <!-- Our own stylesheet -->
-        <link rel="stylesheet" href="./style.css">
+        <!-- <link rel="stylesheet" href="./style.css"> -->
 
         <!-- Raleway font embed -->
         <link
@@ -43,7 +43,9 @@
                         <a href="/about" id="routing">About</a>
                     </li>
                 </ul>
-                <button class="nav__wrapper__cta">Contact us</button>
+                <button
+                    class="nav__wrapper__cta"
+                    onclick="window.open('mailto:tomasz_gajda@outlook.com','_blank');">Contact us</button>
             </div>
         </nav>
 
@@ -68,7 +70,7 @@
             <h5 class="footer__copyright">Copyright © 2020 Tomasz Gajda</h5>
         </footer>
 
-        <script type="module" src="./script.js"></script>
+        <!-- <script type="module" src="./script.js"></script> -->
 
     </body>
 </html>
