--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sorting Algorithms in Javascript</title>
+        <script type="module" src="static/script.js"></script>
 
         <!-- Favicon -->
-        <link rel="icon" href="./assets/img/footer-logo.png">
+        <link rel="icon" href="./static/assets/img/footer-logo.png">
 
         <!-- Our own stylesheet -->
-        <!-- <link rel="stylesheet" href="./style.css"> -->
+        <link rel="stylesheet" href="static/style.css">
 
         <!-- Raleway font embed -->
         <link
@@ -26,21 +27,21 @@
         <nav class="nav" id="navbar">
             <div class="nav__wrapper">
                 <a href="/" id="#routing">
-                    <img src="./assets/img/logo.png" alt="logo" class="nav__wrapper__logo">
+                    <img src="./static/assets/img/logo.png" alt="logo" class="nav__wrapper__logo">
                 </a>
                 <img
-                    src="./assets/img/hamburger.svg"
+                    src="./static/assets/img/hamburger.svg"
                     alt="hamburger"
                     class="nav__wrapper__hamburger">
                 <ul class="nav__wrapper__links">
                     <li class="nav__wrapper__links__link">
-                        <a href="/news" id="routing">News</a>
+                        <a href="/src/news" id="routing">News</a>
                     </li>
                     <li class="nav__wrapper__links__link">
-                        <a href="/algorithms" id="routing">Algorithms</a>
+                        <a href="/src/algorithms" id="routing">Algorithms</a>
                     </li>
                     <li class="nav__wrapper__links__link">
-                        <a href="/about" id="routing">About</a>
+                        <a href="/src/about" id="routing">About</a>
                     </li>
                 </ul>
                 <button
@@ -54,23 +55,22 @@
 
         <footer class="footer">
             <a href="/" id="#routing">
-                <img src="./assets/img/footer-logo.png" alt="footer-logo" class="footer__logo">
+                <img src="./static/assets/img/footer-logo.png" alt="footer-logo" class="footer__logo">
             </a>
             <ul class="footer__links">
                 <li class="footer__link">
-                    <a href="/news" id="routing">News</a>
+                    <a href="/src/news" id="routing">News</a>
                 </li>
                 <li class="footer__link">
-                    <a href="/algorithms" id="routing">Algorithms</a>
+                    <a href="/src/algorithms" id="routing">Algorithms</a>
                 </li>
                 <li class="footer__link">
-                    <a href="/about" id="routing">About</a>
+                    <a href="/src/about" id="routing">About</a>
                 </li>
             </ul>
             <h5 class="footer__copyright">Copyright © 2020 Tomasz Gajda</h5>
         </footer>
 
-        <!-- <script type="module" src="./script.js"></script> -->
 
     </body>
 </html>
