--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sorting Algorithms in Javascript</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sorting Algorithms in Javascript</title>
 
-        <!-- Favicon -->
-        <link rel="icon" href="./static/assets/img/footer-logo.png">
+    <!-- Favicon -->
+    <link rel="icon" href="./static/assets/img/footer-logo.png" />
 
-        <!-- Our own stylesheet -->
-        <link rel="stylesheet" href="static/style.css">
+    <!-- Our own stylesheet -->
+    <link rel="stylesheet" href="static/style.css" />
 
-        <!-- Raleway font embed -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
-            rel="stylesheet">
+    <!-- Raleway font embed -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-        <!-- Roboto font embed -->
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-            rel="stylesheet">
-    </head>
-    <body>
-        <!-- Navbar -->
-        <nav class="nav" id="navbar">
-            <div class="nav__wrapper">
-                <a href="/" id="#routing">
-                    <img src="./static/assets/img/logo.png" alt="logo" class="nav__wrapper__logo">
-                </a>
-                <img
-                    src="./static/assets/img/hamburger.svg"
-                    alt="hamburger"
-                    class="nav__wrapper__hamburger" 
-                    id="hamburger">
-                <ul class="nav__wrapper__links" id="links">
-                    <li class="nav__wrapper__links__link">
-                        <a href="/news" id="routing">News</a>
-                    </li>
-                    <li class="nav__wrapper__links__link">
-                        <a href="/algorithms" id="routing">Algorithms</a>
-                    </li>
-                    <li class="nav__wrapper__links__link">
-                        <a href="/about" id="routing">About</a>
-                    </li>
-                </ul>
-                <button
-                    class="nav__wrapper__cta"
-                    onclick="window.open('mailto:tomasz_gajda@outlook.com','_blank');">Contact us</button>
-            </div>
-        </nav>
+    <!-- Roboto font embed -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="nav" id="navbar">
+      <div class="nav__wrapper">
+        <a href="/" id="#routing">
+          <img
+            src="./static/assets/img/logo.png"
+            alt="logo"
+            class="nav__wrapper__logo"
+          />
+        </a>
+        <img
+          src="./static/assets/img/hamburger.svg"
+          alt="hamburger"
+          class="nav__wrapper__hamburger"
+          id="hamburger"
+        />
+        <ul class="nav__wrapper__links" id="links">
+          <li class="nav__wrapper__links__link">
+            <a href="/news" id="routing">News</a>
+          </li>
+          <li class="nav__wrapper__links__link">
+            <a href="/algorithms" id="routing">Algorithms</a>
+          </li>
+          <li class="nav__wrapper__links__link">
+            <a href="/about" id="routing">About</a>
+          </li>
+        </ul>
+        <button
+          class="nav__wrapper__cta"
+          onclick="window.open('mailto:tomasz_gajda@outlook.com','_blank');"
+        >
+          Contact us
+        </button>
+      </div>
+    </nav>
 
-        <!-- PLACEHOLDER -->
-        <div id="placeholder"></div>
+    <!-- PLACEHOLDER -->
+    <div id="placeholder"></div>
 
-        <footer class="footer">
-            <a href="/" id="#routing">
-                <img src="./static/assets/img/footer-logo.png" alt="footer-logo" class="footer__logo">
-            </a>
-            <ul class="footer__links">
-                <li class="footer__link">
-                    <a href="/news" id="routing">News</a>
-                </li>
-                <li class="footer__link">
-                    <a href="/algorithms" id="routing">Algorithms</a>
-                </li>
-                <li class="footer__link">
-                    <a href="/about" id="routing">About</a>
-                </li>
-            </ul>
-            <h5 class="footer__copyright">Copyright © 2020 Tomasz Gajda</h5>
-        </footer>
+    <footer class="footer">
+      <a href="/" id="#routing">
+        <img
+          src="./static/assets/img/footer-logo.png"
+          alt="footer-logo"
+          class="footer__logo"
+        />
+      </a>
+      <ul class="footer__links">
+        <li class="footer__link">
+          <a href="/news" id="routing">News</a>
+        </li>
+        <li class="footer__link">
+          <a href="/algorithms" id="routing">Algorithms</a>
+        </li>
+        <li class="footer__link">
+          <a href="/about" id="routing">About</a>
+        </li>
+      </ul>
+      <h5 class="footer__copyright">Copyright © 2020 Tomasz Gajda</h5>
+    </footer>
 
-        <script type="module" src="static/script.js"></script>
-        <script src="static/assets/js/Canvas.js"></script>
-    </body>
+    <script type="module" src="static/script.js"></script>
+    <script src="static/assets/js/Canvas.js"></script>
+  </body>
 </html>
